--- a/valeurs.html
+++ b/valeurs.html
@@ -5,10 +5,10 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="La ScopTech : des scop du numérique, entreprises humaines et digitales rassemblées autour de valeurs communes.">
+    <meta name="description" content="Nos valeurs : performance, démocratie, talents, épanouissement, pérennité, partage, innovation, croissance, transparance, travail.">
     <meta name="author" content="">
 
-    <title>ScopTech - Les entreprises coopératives du numérique</title>
+    <title>Scoptech - Nos valeurs</title>
 
     <!-- Bootstrap core CSS -->
 
@@ -25,9 +25,9 @@
   <body id="page-top">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="smallNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">La ScopTech</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">La Scoptech</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -53,17 +53,11 @@
 
     <!-- Header -->
     <header class="masthead">
-
       <div class="container">
-
-        <div class="intro-text">
-          <div class="intro-lead-in">Des entreprises </div>
-          <div class="intro-heading text-uppercase">digitales & humaines</div>
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#decouvrir">En savoir plus</a>
+        <div class="small-intro-text">
+          <div class="intro-heading text-uppercase">Nos valeurs</div>
         </div>
-
       </div>
-      <div class="masthead-layer"></div>
     </header>
 
     <!-- Services -->
@@ -72,7 +66,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Qui sommes nous ?</h2>
-            <h3 class="section-subheading text-muted">La <span class="logo-scoptech-small-dark">ScopTech</span>, c'est des entreprises du numérique rassemblées autour d'un savoir-faire digital et de valeurs humaines.</h3>
+            <h3 class="section-subheading text-muted">La <span class="logo-scoptech-small-dark">Scoptech</span>, c'est des entreprises du numérique rassemblées autour d'un savoir-faire digital et de valeurs humaines.</h3>
           </div>
         </div>
         <div class="row text-center">
@@ -83,7 +77,7 @@
             </span>
             <h4 class="service-heading">Nos valeurs</h4>
             <p class="text-muted">Nous construisons des conditions de travail optimales et nos collaborateurs sont motivés.</p>
-            <a href="/valeurs.html">En savoir plus&nbsp;>></a>
+            <a href="">En savoir plus&nbsp;>></a>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -211,7 +205,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Actualités</h2>
-            <h3 class="section-subheading text-muted">L'actualité du mouvement ScopTech et de ses entreprises</h3>
+            <h3 class="section-subheading text-muted">L'actualité du mouvement Scoptech et de ses entreprises</h3>
           </div>
         </div>
         <div class="row">
@@ -224,7 +218,7 @@
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <span class="date">- Le 20 septembre 2018 - </span>
-                    <h4 class="subheading"><a href="">Le site de la ScopTech est en ligne !</a></h4>
+                    <h4 class="subheading"><a href="">Le site de la Scoptech est en ligne !</a></h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -430,7 +424,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright &copy; ScopTech 2018</span>
+            <span class="copyright">Copyright &copy; SCOPTECH 2018</span>
           </div>
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
