--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="La ScopTech : des scop du numérique, entreprises humaines et digitales rassemblées autour de valeurs communes.">
+    <meta name="description" content="La SCOPTech : des scops du numérique, entreprises humaines et digitales rassemblées autour de valeurs communes.">
     <meta name="author" content="">
 
-    <title>ScopTech - Les entreprises coopératives du numérique</title>
+    <title>SCOPTech - Les entreprises coopératives du numérique</title>
 
     <!-- Bootstrap core CSS -->
 
@@ -27,7 +27,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">La ScopTech</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">La SCOPTech</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -72,7 +72,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Qui sommes nous ?</h2>
-            <h3 class="section-subheading text-muted">La <span class="logo-scoptech-small-dark">ScopTech</span>, c'est des entreprises du numérique rassemblées autour d'un savoir-faire digital et de valeurs humaines.</h3>
+            <h3 class="section-subheading text-muted">La <span class="logo-scoptech-small-dark">SCOPTech</span>, c'est des entreprises du numérique rassemblées autour d'un savoir-faire digital et de valeurs humaines.</h3>
           </div>
         </div>
         <div class="row text-center">
@@ -211,7 +211,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Actualités</h2>
-            <h3 class="section-subheading text-muted">L'actualité du mouvement ScopTech et de ses entreprises</h3>
+            <h3 class="section-subheading text-muted">L'actualité du mouvement SCOPTech et de ses entreprises</h3>
           </div>
         </div>
         <div class="row">
@@ -224,7 +224,7 @@
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <span class="date">- Le 20 septembre 2018 - </span>
-                    <h4 class="subheading"><a href="">Le site de la ScopTech est en ligne !</a></h4>
+                    <h4 class="subheading"><a href="">Le site de la SCOPTech est en ligne !</a></h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -430,7 +430,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright &copy; ScopTech 2018</span>
+            <span class="copyright">Copyright &copy; SCOPTech 2018</span>
           </div>
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
