--- a/valeurs.html
+++ b/valeurs.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Nos valeurs : performance, démocratie, talents, épanouissement, pérennité, partage, innovation, croissance, transparance, travail.">
     <meta name="author" content="">
 
-    <title>Scoptech - Nos valeurs</title>
+    <title>SCOPTech - Nos valeurs</title>
 
     <!-- Bootstrap core CSS -->
 
@@ -27,7 +27,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-shrink" id="smallNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">La Scoptech</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">La SCOPTech</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -66,7 +66,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Qui sommes nous ?</h2>
-            <h3 class="section-subheading text-muted">La <span class="logo-scoptech-small-dark">Scoptech</span>, c'est des entreprises du numérique rassemblées autour d'un savoir-faire digital et de valeurs humaines.</h3>
+            <h3 class="section-subheading text-muted">La <span class="logo-scoptech-small-dark">SCOPTech</span>, c'est des entreprises du numérique rassemblées autour d'un savoir-faire digital et de valeurs humaines.</h3>
           </div>
         </div>
         <div class="row text-center">
@@ -205,7 +205,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Actualités</h2>
-            <h3 class="section-subheading text-muted">L'actualité du mouvement Scoptech et de ses entreprises</h3>
+            <h3 class="section-subheading text-muted">L'actualité du mouvement SCOPTech et de ses entreprises</h3>
           </div>
         </div>
         <div class="row">
@@ -218,7 +218,7 @@
                 <div class="timeline-panel">
                   <div class="timeline-heading">
                     <span class="date">- Le 20 septembre 2018 - </span>
-                    <h4 class="subheading"><a href="">Le site de la Scoptech est en ligne !</a></h4>
+                    <h4 class="subheading"><a href="">Le site de la SCOPTech est en ligne !</a></h4>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
@@ -424,7 +424,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright &copy; SCOPTECH 2018</span>
+            <span class="copyright">Copyright &copy; SCOPTech 2018</span>
           </div>
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
